--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
 
     <!-- Módulo principal -->
-    <script type="module" src="/framerly.js"></script>
+   <script type="module" src="https://cdn.jsdelivr.net/gh/JossFramework/framerly@main/framerly.js"></script>
+
 </body>
 
 </html>
