--- a/index.html
+++ b/index.html
@@ -5,38 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Framerly</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- Import animations CSS -->
+    <component src="/animations"></component>
 </head>
 
-<body class="bg-gray-50 text-gray-800 min-h-screen">
+<body class="bg-gray-50 text-gray-800 h-full">
 
 
-
-    <!-- Rutas personalizadas -->
-    <header class="border-b border-[#ccc] bg-white h-[50px] flex items-center pl-4">
-        <routes class="flex gap-4 text-sm font-medium">
-            <a href="/default">Default</a>
-            <a href="/doc">Doc</a>
-            <a href="/about">About me</a>
-        </routes>
-    </header>
+    <!-- load header component -->
+    <component src="/header"></component>
 
 
     <!-- dynamic content -->
-    <content>
+    <content >
 
     </content>
 
 
 
-    <!-- Footer -->
-    <footer class="bg-gray-200 py-4 text-center text-sm text-gray-600">
-        Hecho con ❤️ por JossFramework — Framerly v0.1
-    </footer>
-
+    <!-- load footer component -->
+    <component src="/footer" ></component>
 
     <!-- Módulo principal -->
-   <script type="module" src="https://cdn.jsdelivr.net/gh/JossFramework/framerly@main/framerly.js"></script>
-
+    <!-- <script type="module" src="https://cdn.jsdelivr.net/gh/JossFramework/framerly@main/framerly.js"></script> -->
+    <script type="module" src="framerly.js"></script>
 </body>
 
 </html>
