--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
     <!-- load footer component -->
     <component src="/footer" ></component>
 
-    <!-- Módulo principal -->
-    <!-- <script type="module" src="https://cdn.jsdelivr.net/gh/JossFramework/framerly@main/framerly.js"></script> -->
-    <script type="module" src="framerly.js"></script>
+
+    
+    <!-- CDN Framerly -->
+    <script type="module" src="https://cdn.jsdelivr.net/gh/JossFramework/framerly@main/framerly.js"></script>
+  
 </body>
 
 </html>
