--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <component src="/footer" ></component>
 
 
-    
+
     <!-- CDN Framerly -->
-    <script type="module" src="https://cdn.jsdelivr.net/gh/JossFramework/framerly@main/framerly.js"></script>
-  
+    <script type="module" src="https://cdn.jsdelivr.net/gh/JossFramework/framerly@v1.0.0/framerly.js"></script>
+
 </body>
 
 </html>
