--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 
-    <!-- CDN Framerly -->
+    <!-- CDN Framerly v1.0.0 -->
     <script type="module" src="https://cdn.jsdelivr.net/gh/JossFramework/framerly@v1.0.0/framerly.js"></script>
 
 </body>
