--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <!-- dynamic content -->
     <content> </content>
 
-
     
-    <!-- donations -->
+    <!-- footer -->
     <component src="/footer"></component>
 
     <!-- CDN Framerly v1.0.0 -->
@@ -26,7 +25,9 @@
       type="module"
       src="https://cdn.jsdelivr.net/gh/JossFramework/framerly@v1.0.0/framerly.js"
     ></script>
-     
+
+    <!-- donations widget -->
     <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="Jossframework" data-description="Support me on Buy me a coffee!" data-message="Apoya para seguir impulsando ❤️" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+ 
   </body>
 </html>
